--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <hr class="main-title__underline">
                 </div>
                 
-                <section class="select-doc">                    
+                <div class="select-doc">                    
                     <label class="select-type website">
                         <input required hidden type="radio" name="doc" value="website">
                         <div class="select-wrapper">
@@ -92,7 +92,7 @@
                             <img class="select-img" src="images/social.jpg" alt="social account">
                         </div>
                     </label>          
-                </section>   
+                </div>   
 
                 <section class="upload-files">
                     <span class="num-1 num"></span>
