--- a/index.html
+++ b/index.html
@@ -76,21 +76,21 @@
                 <div class="select-doc">                    
                     <label class="select-type website">
                         <input required hidden type="radio" name="doc" value="website">
-                        <div class="select-wrapper">
+                        <span class="select-wrapper">
                             <img class="select-img" src="images/website.jpg" alt="website">
-                        </div>
+                        </span>
                     </label>
                     <label class="select-type choose-document document">
                         <input checked required hidden type="radio" name="doc" value="document">
-                        <div class="select-wrapper">
+                        <span class="select-wrapper">
                             <img class="select-img" src="images/document.jpg" alt="document">
-                        </div>
+                        </span>
                     </label>
                     <label class="select-type choose-document account">
                         <input required hidden type="radio" name="doc" value="account">
-                        <div class="select-wrapper">
+                        <span class="select-wrapper">
                             <img class="select-img" src="images/social.jpg" alt="social account">
-                        </div>
+                        </span>
                     </label>          
                 </div>   
 
